## Process this file with automake to produce Makefile.in

SUBDIRS = po data DiskManager

sbin_SCRIPTS = disk-manager
CLEANFILES  = disk-manager
EXTRA_DIST  = disk-manager.in

EXTRA_DIST += intltool-extract.in intltool-merge.in intltool-update.in
DISTCLEANFILES = intltool-extract intltool-merge intltool-update config.status.lineno


